--- a/site/views/web/index.html
+++ b/site/views/web/index.html
@@ -16,11 +16,14 @@
         
         <div class="col-md-4">
             <div class="section">
-                <h4>
-                    System
-                </h4>
                 <div>
                     <a href="/user">User Home</a>
+                </div>
+                <div>
+                    <a href="/admin">Admin Home</a>
+                </div>
+                <div>
+                    <a href="/upload">Upload Test</a>
                 </div>
             </div>
         </div>
