added login button

--- a/site/views/layout/layout.html
+++ b/site/views/layout/layout.html
@@ -34,8 +34,8 @@
 
 {% block footer %}
 <div class="footer-container container">
-    <div class="row">
-        <span class="text-muted col-md-12">website footer</span>
+    <div class="footer">
+        <a class="login-button btn btn-success pull-right" role="button">Login</a>
     </div>
 </div>
 {% endblock %}
