--- a/site/public/style/style.css
+++ b/site/public/style/style.css
@@ -5,3 +5,9 @@
 .footer-container {
     margin-top: 20px;
 }
+.footer {
+    background-color: #e1e1e8;
+}
+.login-button {
+    font-size: 1.5em;
+}
