list of uploaded files

--- a/site/views/web/index.html
+++ b/site/views/web/index.html
@@ -25,6 +25,9 @@
                 <div>
                     <a href="/upload">Upload Test</a>
                 </div>
+                <div>
+                    <a href="/uploaded_list">List of uploaded</a>
+                </div>
             </div>
         </div>
         
