--- a/site/public/style/style.css
+++ b/site/public/style/style.css
@@ -1,17 +1,20 @@
+.navbar {
+    border: 0;
+}
 .body-container {
     min-height: 420px;
 }
-
-.footer-container {
-    margin-top: 20px;
-}
 .header-container {
-    padding-left: 0px;
-    padding-right: 0px;
-}
-.footer {
-    background-color: #e1e1e8;
+    padding-left: 0;
+    padding-right: 0;
 }
 .login-button {
     font-size: 1.5em;
+}
+.footer-container {
+    width: 100%;
+    padding: 20px 150px;
+    margin-left: 0;
+    margin-right: 0;
+    background-color: #e1e1e8;
 }
