--- a/site/public/style/style.css
+++ b/site/public/style/style.css
@@ -13,5 +13,13 @@
     background-color: #e1e1e8;
 }
 .login-button {
-    font-size: 1.5em;
+    float: right;
+    margin-top: 8px;
+}
+.user-dropdown {
+    margin-top: 8px;
+    margin-left: 10px;
+}
+.dropdown-menu {
+    padding-top: 4px;
 }
