--- a/site/views/layout/layout.html
+++ b/site/views/layout/layout.html
@@ -53,7 +53,12 @@
 
 {% block footer %}
 <div class="footer-container container">
-  <a class="login-button btn btn-success pull-right" role="button">Login</a>
+  <div class="right-container pull-right">
+    <a class="login-button btn btn-success pull-right" role="button">Login</a>
+  </div>
+  <div class="right-left pull-left">
+    Insert content here
+  </div>
  </div>
 {% endblock %}
 
