--- a/site/views/web/index.html
+++ b/site/views/web/index.html
@@ -28,6 +28,9 @@
                 <div>
                     <a href="/uploaded_list">List of uploaded</a>
                 </div>
+                <div>
+                    <a href="/">Add an article</a>
+                </div>
             </div>
         </div>
         
