adding articles, test1

--- a/site/views/web/index.html
+++ b/site/views/web/index.html
@@ -29,7 +29,7 @@
                     <a href="/uploaded_list">List of uploaded</a>
                 </div>
                 <div>
-                    <a href="/add_article">Add an article</a>
+                    <a href="/article/add">Add an article</a>
                 </div>
             </div>
         </div>
