--- a/site/views/announcement/index.html
+++ b/site/views/announcement/index.html
@@ -13,15 +13,25 @@
 
 {% block content %}
 <div class="container">
-  <div class="post panel panel-default">
-    <div class="panel-heading">
-      <h2 class="post-title">Post Title</h2>
-      <p class="post-date">Post Date</p>
+  {% for announcement in page.announcements %}
+    <div class="post panel panel-default">
+      <div class="panel-heading">
+        <h2 class="post-title">
+          {{announcement.title}}
+        </h2>
+        <p class="post-date">Post Date</p>
+      </div>
+      <p class="post-content">
+        {{announcement.content}}
+        <a href="#"> Read more</a>
+      </p>
     </div>
-    <p class="post-content">
-      Content goes here. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat...
-      <a href="#"> Read more</a>
-    </p>
-  </div>
+  {% endfor%}
+  <script type="text/jsx">
+    React.render(
+        <h1>Hello, world!</h1>,
+        document.getElementById('example')
+    );
+  </script>
 </div>
 {% endblock %}
