added scoial media buttons

--- a/site/views/layout/layout.html
+++ b/site/views/layout/layout.html
@@ -61,7 +61,8 @@
 {% block footer %}
 <div class="footer-container container">
     <div class="footer">
-        
+        <a href="https://www.facebook.com/pages/Reactcms/1693458924214767?skip_nax_wizard=true&ref_type=bookmark" target="_blank" style="text-decoration: none;" class="fa fa-facebook-square"> Facebook</a>
+        <a href="https://twitter.com/reactcms" target="_blank" style="text-decoration: none;" class="fa fa-twitter"> Twitter</a>
     </div>
 </div>
 {% endblock %}
