--- a/site/views/announcement/index.html
+++ b/site/views/announcement/index.html
@@ -19,19 +19,15 @@
         <h2 class="post-title">
           {{announcement.title}}
         </h2>
-        <p class="post-date">Post Date</p>
+        <p class="post-date">
+          {{announcement.create_date.toString()}}
+        </p>
       </div>
       <p class="post-content">
         {{announcement.content}}
         <a href="#"> Read more</a>
       </p>
     </div>
-  {% endfor%}
-  <script type="text/jsx">
-    React.render(
-        <h1>Hello, world!</h1>,
-        document.getElementById('example')
-    );
-  </script>
+  {% endfor %}
 </div>
 {% endblock %}
