--- a/site/views/article/index.html
+++ b/site/views/article/index.html
@@ -8,41 +8,26 @@
 
 {% block style %}
 {% parent %}
-<style>
-.container {
-    color: #666;
-}
-</style>
+<link rel="stylesheet" href="/style/article/index.css">
 {% endblock %}
 
 {% block content %}
 <div class="container">
-    
-    <div class="row">
-        <div class="col-md-12" style="margin:40px auto;font-size:2.1em;color:#666;">
-            <div style="text-align:center;">List of articles</div>
-        </div>
+  {% for article in page.articles %}
+  <div class="post panel panel-default">
+    <div class="panel-heading">
+      <h2 class="post-title">
+        {{article.title}}
+      </h2>
+      <p class="post-date">
+        {{announcement.create_date.toString()}}
+      </p>
     </div>
-    
-    <div class="row">
-        <table class="table table-striped">
-            <tr>
-                <td>Title</td>
-                <td>Content</td>
-            </tr>
-            
-            {% for article in page.articles %}
-                <tr>
-                    <td>
-                        {{article.title}}
-                    </td>
-                    <td>
-                        {{article.content}}
-                    </td>
-                </tr>
-            {% endfor%}    
-        </table>
-    </div>
-
+    <p class="post-content">
+      {{article.content}}
+      <a href="#"> Read more</a>
+    </p>
+  </div>
+  {% endfor %}
 </div>
 {% endblock %}
