update index page

--- a/site/views/web/index.html
+++ b/site/views/web/index.html
@@ -15,20 +15,28 @@
         
         <div class="col-md-4">
             <div class="section">
+                <h4>Modules</h4>
+                <div>
+                    <a href="/admin">Admin Home</a>
+                </div>
                 <div>
                   <a href="/user">User Home</a>
                 </div>
                 <div>
-                    <a href="/admin">Admin Home</a>
+                    <a href="/item">Item Home</a>
                 </div>
-                <br>
+                <div>
+                    <a href="/file">File Home</a>
+                </div>
                 <div>
                     <a href="/upload">Upload Test</a>
                 </div>
                 <div>
                     <a href="/uploaded_list">List of uploaded</a>
                 </div>
-                <br>
+                <div>
+                    <a href="/article">Article Home</a>
+                </div>
                 <div>
                     <a href="/article/add">Add an article</a>
                 </div>
