--- a/site/views/web/index.html
+++ b/site/views/web/index.html
@@ -29,20 +29,18 @@
                     <a href="/file">File Home</a>
                 </div>
                 <div>
-                    <a href="/upload">Upload Test</a>
-                </div>
-                <div>
-                    <a href="/uploaded_list">List of uploaded</a>
-                </div>
-                <div>
                     <a href="/article">Article Home</a>
                 </div>
+                
+                <br/>
+                <p>move the following links inside article home linke</p>
                 <div>
                     <a href="/article/add">Add an article</a>
                 </div>
                 <div>
                     <a href="/article/list">List of articles</a>
                 </div>
+                
             </div>
         </div>
         
