--- a/site/views/layout/layout.html
+++ b/site/views/layout/layout.html
@@ -65,8 +65,14 @@
 {% block footer %}
 <div class="footer-container container">
     <div class="footer">
-        <a href="https://www.facebook.com/pages/Reactcms/1693458924214767?skip_nax_wizard=true&ref_type=bookmark" target="_blank" style="text-decoration: none;" class="fa fa-facebook-square"> Facebook</a>
-        <a href="https://twitter.com/reactcms" target="_blank" style="text-decoration: none;" class="fa fa-twitter"> Twitter</a>
+        <div class="footer-right pull-right">
+            <a href="https://www.facebook.com/pages/Reactcms/1693458924214767?skip_nax_wizard=true&ref_type=bookmark" target="_blank" style="text-decoration: none;" class="fa fa-facebook-square"> Facebook</a>
+            <a href="https://twitter.com/reactcms" target="_blank" style="text-decoration: none;" class="fa fa-twitter"> Twitter</a>
+            <a href="https://www.linkedin.com/pub/react-cms/b5/2b0/ba2?domainCountryName=&csrfToken=ajax%3A4633664115178820682" target="_blank" class="fa fa-linkedin-square" style="text-decoration: none;"> Linkedin</a>
+        </div>
+        <div class="footer-left pull-left">
+            <a href="/" class="btn btn-primary glyphicon glyphicon-home" style="font-size: 1.2em; margin-left: -100px;"> ReactCMS</a>
+        </div>    
     </div>
 </div>
 {% endblock %}
