--- a/site/views/flie/upload.html
+++ b/site/views/flie/upload.html
@@ -28,9 +28,9 @@
     
     <div class="row upload-form">
         <div class="col-md-6 col-md-offset-3">
-            <form role="form" action="/web/upload_post" enctype="multipart/form-data" method="POST">
+            <form role="form" action="/data/file/upload_post" enctype="multipart/form-data" method="POST">
                 <div class="form-group">
-                    <label for="title" class="form-title">Select a file</label>
+                    <label for="filename" class="form-title">Select a file</label>
                     <input type="file" class="form-control" name="filename" id="filename">
                 </div>
                 <button type="submit" class="btn btn-primary btn-lg btn-block" name="submit">Upload</button>
