--- a/site/views/layout/layout.html
+++ b/site/views/layout/layout.html
@@ -97,7 +97,7 @@
             <a href="https://www.linkedin.com/pub/react-cms/b5/2b0/ba2?domainCountryName=&csrfToken=ajax%3A4633664115178820682" target="_blank" class="fa fa-linkedin-square" style="text-decoration: none;"> Linkedin</a>
         </div>
         <div class="footer-left pull-left">
-            <a href="/" class="btn btn-primary glyphicon glyphicon-home" style="font-size: 1.2em; margin-left: -100px;"> ReactCMS</a>
+            <a href="/" class="glyphicon glyphicon-home text-muted" style="font-size: 1.2em; text-decoration: none; margin-left: -100px; margin-right: 50px;"> ReactCMS</a>
         </div>    
     </div>
 </div>
