item pages added

--- a/site/views/item/view.html
+++ b/site/views/item/view.html
@@ -14,16 +14,8 @@
 <div class="container">
     <div class="row">
         <h4 class="col-md-12">
-            Item Home
+            Item View
         </h4>
-    </div>
-    <div class="row">
-        <div class="col-md-12">
-            <ul>
-                <li><a href="/item/list">Item List</a></li>
-                <li><a href="/item/add">Add Item</a></li>
-            </ul>
-        </div>
     </div>
 </div>
 {% endblock %}
