--- a/site/views/web/index.html
+++ b/site/views/web/index.html
@@ -23,7 +23,7 @@
                   <a href="/user">User Home</a>
                 </div>
                 <div>
-                    <a href="/item">Item Home</a>
+                    <a href="/item/home">Item Home</a>
                 </div>
                 <div>
                     <a href="/file">File Home</a>
