--- a/site/views/item/add.html
+++ b/site/views/item/add.html
@@ -12,10 +12,28 @@
 
 {% block content %}
 <div class="container">
+    
     <div class="row">
         <h4 class="col-md-12">
             Add Item
         </h4>
     </div>
+    
+    <div class="row" style="margin-top:20px;">
+        <div class="col-md-6">
+            <form action="/item/add" method="POST">
+                <div class="form-group">
+                    <label for="type">Type</label>
+                    <input type="text" class="form-control" name="type" />
+                </div>
+                <div class="form-group">
+                    <label for="content">Content</label>
+                    <input type="text" class="form-control" name="content" />
+                </div>
+                <button type="submit" class="btn btn-default">Save</button>
+            </form>
+        </div>
+    </div>
+    
 </div>
 {% endblock %}
