--- a/site/views/item/list.html
+++ b/site/views/item/list.html
@@ -1,4 +1,5 @@
 {% extends '../layout/layout.html' %}
+{% set items = page.docs %}
 
 {% block style %}
 {% parent %}
@@ -12,10 +13,33 @@
 
 {% block content %}
 <div class="container">
+    
     <div class="row">
         <h4 class="col-md-12">
             Item List
         </h4>
     </div>
+    
+    <div class="row" style="margin-top:20px;">
+        <div class="col-md-12">
+            <table class="table table-bordered">
+            <thead>
+                <tr>
+                    <th>Type</th>
+                    <th>Content</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for item in items %}
+                <tr>
+                    <td>{{ item.type }}</td>
+                    <td>{{ item.content }}</td>
+                </tr>
+                {% endfor %}
+            </tbody>
+            </table>
+        </div>
+    </div>
+    
 </div>
 {% endblock %}
