--- a/site/views/flie-old/upload.html
+++ b/site/views/flie-old/upload.html
@@ -28,7 +28,7 @@
     
     <div class="row upload-form">
         <div class="col-md-6 col-md-offset-3">
-            <form role="form" action="/data/file/upload_post" enctype="multipart/form-data" method="POST">
+            <form role="form" action="/file/add" enctype="multipart/form-data" method="POST">
                 <div class="form-group">
                     <label for="filename" class="form-title">Select a file</label>
                     <input type="file" class="form-control" name="filename" id="filename">
