changed ReactCMS footer text

--- a/site/views/layout/layout.html
+++ b/site/views/layout/layout.html
@@ -91,13 +91,13 @@
 {% block footer %}
 <div class="footer-container container">
     <div class="footer">
-        <div class="footer-right pull-right">
+        <div class="footer-right pull-right" style="margin-right: 60px;">
             <a href="https://www.facebook.com/pages/Reactcms/1693458924214767?skip_nax_wizard=true&ref_type=bookmark" target="_blank" style="text-decoration: none;" class="fa fa-facebook-square"> Facebook</a>
             <a href="https://twitter.com/reactcms" target="_blank" style="text-decoration: none;" class="fa fa-twitter"> Twitter</a>
             <a href="https://www.linkedin.com/pub/react-cms/b5/2b0/ba2?domainCountryName=&csrfToken=ajax%3A4633664115178820682" target="_blank" class="fa fa-linkedin-square" style="text-decoration: none;"> Linkedin</a>
         </div>
         <div class="footer-left pull-left">
-            <a href="/" class="glyphicon glyphicon-home text-muted" style="font-size: 1.2em; text-decoration: none; margin-left: -100px; margin-right: 50px;"> ReactCMS</a>
+            <p class="text-muted" style="font-size: 1.2em; text-decoration: none; margin-left: 100px; margin-right: 50px;">ReactCMS, a flexible content management system</p>
         </div>    
     </div>
 </div>
