--- a/site/views/file/add.html
+++ b/site/views/file/add.html
@@ -18,22 +18,18 @@
             Add Item
         </h4>
     </div>
-    
-    <div class="row" style="margin-top:20px;">
-        <div class="col-md-6">
-            <form action="/item/add" method="POST">
-                <div class="form-group">
-                    <label for="type">Type</label>
-                    <input type="text" class="form-control" name="type" />
-                </div>
-                <div class="form-group">
-                    <label for="content">Content</label>
-                    <input type="text" class="form-control" name="content" />
-                </div>
-                <button type="submit" class="btn btn-default">Save</button>
-            </form>
+
+  <div class="row upload-form">
+    <div class="col-md-6 col-md-offset-3">
+      <form role="form" action="/file/upload" enctype="multipart/form-data" method="POST">
+        <div class="form-group">
+          <label for="file" class="form-title">Select a file</label>
+          <input type="file" class="form-control" name="file" id="file">
         </div>
+        <button type="submit" class="btn btn-primary btn-lg btn-block" name="submit">Upload</button>
+      </form>
     </div>
+  </div>
     
 </div>
 {% endblock %}
