--- a/site/public/style/file/index.css
+++ b/site/public/style/file/index.css
@@ -1,5 +1,9 @@
 .file-download {
-    padding-left: 15px;
+    margin-left: 5px;
+    padding-top: 5px;
+}
+.file-info {
+    margin-left: 5px;
     padding-right: 15px;
     padding-top: 5px;
 }
@@ -9,4 +13,10 @@
 }
 .file-name {
     margin: 0;
+}
+.file {
+    width: 300px;
+}
+.upload-btn {
+    margin-bottom: 5px;
 }
