--- a/site/views/file/detail.html
+++ b/site/views/file/detail.html
@@ -31,7 +31,7 @@
                 </tr>
             </thead>
             <tbody>
-                {% for value in item %}
+                {% for value in file %}
                 <tr>
                     <td>{{ loop.key }}</td>
                     <td>{{ value + '' }}</td>
