--- a/site/views/file/index.html
+++ b/site/views/file/index.html
@@ -1,29 +1,39 @@
 {% extends '../layout/layout.html' %}
+{% set files = page.docs %}
 
 {% block style %}
 {% parent %}
-<link rel="stylesheet" href="/style/item/index.css">
+<link rel="stylesheet" href="/style/file/index.css">
 {% endblock %}
 
 {% block script %}
 {% parent %}
-<script src="/script/item/index.js"></script>
+<script src="http://timeago.yarp.com/jquery.timeago.js"></script>
+<script src="/script/file/index.js"></script>
 {% endblock %}
 
 {% block content %}
 <div class="container">
-    <div class="row">
-        <h4 class="col-md-12">
-            Item Home
-        </h4>
-    </div>
-    <div class="row">
-        <div class="col-md-12">
-            <ul>
-                <li><a href="/item/list">Item List</a></li>
-                <li><a href="/item/add">Add Item</a></li>
-            </ul>
+  <div class="container">
+    <div class="container">
+      <a href="/file/upload" class="btn btn-success upload-btn"><span class="fa fa-2x fa-upload"> Upload</span></a>
+      {% for file in files %}
+      <div class="file panel panel-default">
+        <div class="panel-heading">
+          <h2 class="file-name">
+            {{file.filename}}
+          </h2>
+          <p class="file-upload-date">
+            <time class="timeago" datetime={{file.create_date.toISOString()}}>
+              {{file.create_date.toISOString()}}
+            </time>
+          </p>
         </div>
+        <a href="{{ file.file.name }}"><span class="fa fa-2x fa-download file-download"></span></a>
+        <a href="/file/{{ file._id + '' }}/detail"><span class="fa fa-2x fa-info-circle"></span></a>
+      </div>
+      {% endfor %}
     </div>
+  </div>
 </div>
 {% endblock %}
