--- a/site/views/layout/layout.html
+++ b/site/views/layout/layout.html
@@ -92,7 +92,7 @@
 <div class="footer-container container">
     <div class="footer">
         <div class="col-md-4">
-            <a href="/" class="glyphicon glyphicon-home text-muted" style="font-size: 1.2em; text-decoration: none;"> ReactCMS</a>
+            <p class="text-muted" style="font-size: 1.2em; text-decoration: none;">ReactCMS, A Flexible Content Management System</p>
         </div>
         <div class="col-md-8">
             <div class="pull-right">
