--- a/site/public/style/style.css
+++ b/site/public/style/style.css
@@ -24,5 +24,5 @@
     padding: 20px 10px;
     margin-left: 0;
     margin-right: 0;
-    background-color: #e1e1e8;
+    background-color: #f2f2f2;
 }
