--- a/site/views/item/list.html
+++ b/site/views/item/list.html
@@ -33,7 +33,7 @@
             <tbody>
                 {% for item in items %}
                 <tr>
-                    <td><a href="/item/{{ item._id + '' }}/detail">detail</a></td>
+                    <td><a href="/item/{{ item._id + '' }}/detail" class="fa fa-info-circle"> Detail</a></td>
                     <td>{{ item.type }}</td>
                     <td>{{ item.content }}</td>
                 </tr>
