--- a/site/views/layout/layout.html
+++ b/site/views/layout/layout.html
@@ -39,24 +39,29 @@
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
           {% if page.controller == 'home' %}
-          <li class="active"> <a href="/">Home <span class="sr-only">(current)</span></a></li>
+          <li class="active"> <a href="/">Home<span class="sr-only">(current)</span></a></li>
           {% else %}
           <li> <a href="/">Home</a></li>
           {% endif %}
           {% if page.controller == 'announcements' %}
-          <li class="active"> <a href="/announcements">Announcements <span class="sr-only">(current)</span></a></li>
+          <li class="active"> <a href="/announcements">Announcements<span class="sr-only">(current)</span></a></li>
           {% else %}
           <li> <a href="/announcements">Announcements</a></li>
           {% endif %}
           {% if page.controller == 'articles' %}
-          <li class="active"> <a href="/articles">Articles <span class="sr-only">(current)</span></a></li>
+          <li class="active"> <a href="/articles">Articles<span class="sr-only">(current)</span></a></li>
           {% else %}
           <li> <a href="/articles">Articles</a></li>
           {% endif %}
           {% if page.controller == 'users' %}
-          <li class="active"> <a href="/user">Users <span class="sr-only">(current)</span></a></li>
+          <li class="active"> <a href="/user">Users<span class="sr-only">(current)</span></a></li>
           {% else %}
           <li> <a href="/user">Users</a></li>
+          {% endif %}
+          {% if page.controller == 'files' %}
+          <li class="active"> <a href="/files">Files<span class="sr-only">(current)</span></a></li>
+          {% else %}
+          <li> <a href="/files">Files</a></li>
           {% endif %}
           <!--
           TODO: Revamp file controller to be a separate file.
