--- a/site/views/announcement/index.html
+++ b/site/views/announcement/index.html
@@ -14,6 +14,7 @@
 
 {% block content %}
 <div class="container">
+  <a href="/announcements/add" class="btn btn-success new-btn"><span class="fa fa-2x fa-upload"> New Announcement</span></a>
   {% for announcement in page.announcements %}
     <div class="post panel panel-default">
       <div class="panel-heading">
@@ -27,8 +28,10 @@
         </p>
       </div>
       <p class="post-content">
-        {{announcement.content}}
-        <a href="#"> Read more</a>
+        {{ page.shorten(announcement.content) }}
+        {% if page.shorten(announcement.content) != announcement.content %}
+        <a href="#" class="read-more-btn">Read more</a>
+        {% endif %}
       </p>
     </div>
   {% endfor %}
