Revert "truncation working"
This reverts commit f6c791562cbbc5c93c6f5b2a8cfd92ee1d920f9b.

--- a/site/views/announcement/add.html
+++ b/site/views/announcement/add.html
@@ -21,7 +21,7 @@
       <form role="form" action="/data/announcements/add" enctype="multipart/form-data" method="POST">
         <div class="form-group">
           <p>Title: <input type="text" name="title"></p>
-          <p>Content: <textarea name="content"></textarea></p>
+          <p>Content: <input type="text" name="content"></p>
         </div>
         <button type="submit" class="btn btn-primary btn-lg btn-block" name="submit">Add</button>
       </form>
