read more working

--- a/site/views/announcement/index.html
+++ b/site/views/announcement/index.html
@@ -30,7 +30,7 @@
       <p class="post-content">
         {{ page.shorten(announcement.content) }}
         {% if page.shorten(announcement.content) != announcement.content %}
-        <a href="#" class="read-more-btn">Read more</a>
+        <a href="/announcements/{{announcement._id.toString()}}" class="read-more-btn">Read more</a>
         {% endif %}
       </p>
     </div>
