--- a/site/views/article/add_wysiwyg.html
+++ b/site/views/article/add_wysiwyg.html
@@ -9,9 +9,46 @@ $(document).ready(function() {
         height: 300,                 // set editor height
         minHeight: null,             // set minimum height of editor
         maxHeight: null,             // set maximum height of editor
-        focus: true,                 // set focus to editable area after initializing summernote
+        focus: false,                 // set focus to editable area after initializing summernote
+        onImageUpload: function(files, editor, welEditable) {
+            console.log('image upload:', files, editor, welEditable);
+            sendFile(files[0], editor, welEditable);
+        }
     });
 });
+// send the image file
+function sendFile(file, editor, welEditable) {
+    data = new FormData();
+    data.append("file", file);
+    $.ajax({
+        data: data,
+        type: 'POST',
+        xhr: function() {
+            var myXhr = $.ajaxSettings.xhr();
+            if (myXhr.upload) myXhr.upload.addEventListener('progress',progressHandlingFunction, false);
+            return myXhr;
+        },
+        url: '/data/article/upload_editor_image_post',
+        cache: false,
+        contentType: false,
+        processData: false,
+        success: function(url) {
+            console.log('get url:',url);
+            var fullUrl = '/file/' + url;
+            editor.insertImage(welEditable, fullUrl);
+        }
+    });
+}
+// update progress bar
+function progressHandlingFunction(e){
+    if(e.lengthComputable){
+        $('progress').attr({value:e.loaded, max:e.total});
+        // reset progress on complete
+        if (e.loaded == e.total) {
+            $('progress').attr('value','0.0');
+        }
+    }
+}
 </script>
 {% endblock %}
 
@@ -34,11 +71,44 @@ $(document).ready(function() {
     
     <div class="row">
         <div class="col-md-12" style="margin:40px auto;font-size:2.1em;color:#666;">
-            <div style="text-align:center;">WYSIWYG test</div>
+            <div style="text-align:center;">Add article(WYSIWYG test)</div>
         </div>
     </div>
     
+    <!--
     <div id="summernote">Hello Summernote</div>
+    -->
+    
+    
+    
+    <div class="row">
+        <progress></progress>
+    
+        <form role="form" action="/data/article/wysiwyg_post" method="POST" enctype="mulitpart/form-data">
+            <fieldset>
+                <div class="form-group">
+                    <label for="title">Title</label>
+                    <input class="form-control" type="text" id="title" name="title" placeholder="Title" value="">
+                </div>
+         
+                <div class="form-group">
+                    <label for="summernote">Content</label>
+                    <textarea class="input-block-level" id="summernote" name="content" rows="18">
+                        
+                    </textarea>
+                </div>
+    
+            </fieldset>
+         
+            <button type="submit" class="btn btn-primary">Save Changes</button>
+            <button type="button" id="cancel" class="btn">Cancel</button>
+        </form>
+    
+    </div>
+    
+    
+    
+    
 
 </div>
 {% endblock %}
