--- a/site/views/announcement/add.html
+++ b/site/views/announcement/add.html
@@ -18,7 +18,7 @@
 <div class="container">
   <div class="row add-form">
     <div class="col-md-6 col-md-offset-3">
-      <form role="form" action="/data/announcements/add" enctype="multipart/form-data" method="POST">
+      <form role="form" action="/announcements" enctype="multipart/form-data" method="POST">
         <div class="form-group">
           <p>Title: <input type="text" name="title"></p>
           <p>Content: <input type="text" name="content"></p>
