--- a/site/views/file/add.html
+++ b/site/views/file/add.html
@@ -21,7 +21,7 @@
 
   <div class="row upload-form">
     <div class="col-md-6 col-md-offset-3">
-      <form role="form" action="/file/upload" enctype="multipart/form-data" method="POST">
+      <form role="form" action="/files/upload" enctype="multipart/form-data" method="POST">
         <div class="form-group">
           <label for="file" class="form-title">Select a file</label>
           <input type="file" class="form-control" name="file" id="file">
