--- a/site/views/admin/index.html
+++ b/site/views/admin/index.html
@@ -1,5 +1,4 @@
 {% extends '../layout/layout.html' %}
-{% set users = page.docs %}
 
 {% block content %}
 <div class="container">
@@ -8,7 +7,24 @@
     </div>
     <div class="row">
         <div class="col-md-12">
-            Content
+            <div class="section">
+                <h4>Modules</h4>
+                <div>
+                    <a href="/admin">Admin Home</a>
+                </div>
+                <div>
+                    <a href="/user">User Home</a>
+                </div>
+                <div>
+                    <a href="/item/home">Item Home</a>
+                </div>
+                <div>
+                    <a href="/file">File Home</a>
+                </div>
+                <div>
+                    <a href="/article">Article Home</a>
+                </div>
+            </div>
         </div>
     </div>
 </div>
