--- a/site/views/layout/layout.html
+++ b/site/views/layout/layout.html
@@ -22,69 +22,36 @@
 <body>
 {% block header %}
 <div class="header-container container-fluid header">
-  <nav class="navbar navbar-default">
-    <div class="container-fluid">
-      <!-- Brand and toggle get grouped for better mobile display -->
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="#">ReactCMS</a>
-      </div>
-
-      <!-- Collect the nav links, forms, and other content for toggling -->
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav">
-          {% if page.controller == 'home' %}
-          <li class="active"> <a href="/">Home<span class="sr-only">(current)</span></a></li>
-          {% else %}
-          <li> <a href="/">Home</a></li>
-          {% endif %}
-          {% if page.controller == 'announcements' %}
-          <li class="active"> <a href="/announcements">Announcements<span class="sr-only">(current)</span></a></li>
-          {% else %}
-          <li> <a href="/announcements">Announcements</a></li>
-          {% endif %}
-          {% if page.controller == 'articles' %}
-          <li class="active"> <a href="/articles">Articles<span class="sr-only">(current)</span></a></li>
-          {% else %}
-          <li> <a href="/articles">Articles</a></li>
-          {% endif %}
-          {% if page.controller == 'users' %}
-          <li class="active"> <a href="/user">Users<span class="sr-only">(current)</span></a></li>
-          {% else %}
-          <li> <a href="/user">Users</a></li>
-          {% endif %}
-          {% if page.controller == 'files' %}
-          <li class="active"> <a href="/files">Files<span class="sr-only">(current)</span></a></li>
-          {% else %}
-          <li> <a href="/files">Files</a></li>
-          {% endif %}
-          <!--
-          TODO: Revamp file controller to be a separate file.
-          <li><a href="/file">Files</a></li>
-          -->
-        </ul>
-        <ul class="nav navbar-nav navbar-right">
-          {% if page.user == null %}
-          <a class="login-button btn btn-success" href="/user/login" role="button">Administrator Login</a>
-          {% else %}
-          <button type="button" class="btn btn-default dropdown-toggle user-dropdown glyphicon glyphicon-user" data-toggle="dropdown" aria-expanded="false">
-            <span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu" role="menu">
-            <li><a href="#" class="glyphicon glyphicon-home"> Profile</a></li>
-            <li><a href="#" class="glyphicon glyphicon-envelope"> Mail</a></li>
-            <li><a href="#" class="glyphicon glyphicon-cloud"> Cloud</a></li>
-            <li><a href="#" class="glyphicon glyphicon-log-out"> Logout</a></li>
-          </ul>
-          {% endif %}
-        </ul>
-      </div><!-- /.navbar-collapse -->
-    </div><!-- /.container-fluid -->
+    <nav class="navbar navbar-default">
+        <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+              <a class="navbar-brand" href="/">ReactCMS</a>
+        </div>
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav navbar-right">
+                {% if page.user == null %}
+                <a class="login-button btn btn-success" href="/users/login" role="button">Login</a>
+                {% else %}
+                <button type="button" class="btn btn-default dropdown-toggle user-dropdown glyphicon glyphicon-user" data-toggle="dropdown" aria-expanded="false">
+                    <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu" role="menu">
+                    <li><a href="#" class="glyphicon glyphicon-home"> Profile</a></li>
+                    <li><a href="#" class="glyphicon glyphicon-envelope"> Mail</a></li>
+                    <li><a href="#" class="glyphicon glyphicon-cloud"> Cloud</a></li>
+                    <li><a href="#" class="glyphicon glyphicon-log-out"> Logout</a></li>
+                </ul>
+                {% endif %}
+            </ul>
+        </div>
+    </div>
   </nav>
 </div>
 {% endblock %}
@@ -96,10 +63,12 @@
 {% block footer %}
 <div class="footer-container container">
     <div class="footer">
-        <div class="col-md-4">
-            <p class="text-muted" style="font-size: 1.2em; text-decoration: none;">ReactCMS, A Flexible Content Management System</p>
+        <div class="col-md-6">
+            <p class="text-muted" style="text-decoration:none;">
+                ReactCMS - A Flexible Content Management System
+            </p>
         </div>
-        <div class="col-md-8">
+        <div class="col-md-6">
             <div class="pull-right">
                 <a href="/web/page/about" targer="_blank" style="text-decoration: none; margin-right: 15px;" class="fa fa-question-circle"> About Us</a>
                 <a href="https://www.facebook.com/pages/Reactcms/1693458924214767?skip_nax_wizard=true&ref_type=bookmark" target="_blank" style="text-decoration: none; margin-right: 15px;" class="fa fa-facebook-square"> Facebook</a>
