--- a/site/views/web/index.html
+++ b/site/views/web/index.html
@@ -3,47 +3,13 @@
 {% block style %}
 {% parent %}
 <style>
-.section {
-    margin-bottom: 25px;
-}
 </style>
 {% endblock %}
 
 {% block content %}
 <div class="body-container container" style="margin-top:10px;">
-    <div class="row">
-        
-        <div class="col-md-4">
-            <div class="section">
-                <h4>Modules</h4>
-                <div>
-                    <a href="/admin">Admin Home</a>
-                </div>
-                <div>
-                  <a href="/user">User Home</a>
-                </div>
-                <div>
-                    <a href="/item/home">Item Home</a>
-                </div>
-                <div>
-                    <a href="/file">File Home</a>
-                </div>
-                <div>
-                    <a href="/article">Article Home</a>
-                </div>
-                
-                <br/>
-                <p>move the following links inside article home linke</p>
-                <div>
-                    <a href="/article/add">Add an article</a>
-                </div>
-                <div>
-                    <a href="/article/list">List of articles</a>
-                </div>
-                
-            </div>
-        </div>
-        
+    <div class="row" style="min-height:560px;">
+        <h4>Welcome</h4>
     </div>
 </div>
 {% endblock %}
