--- a/site/views/admin/index.html
+++ b/site/views/admin/index.html
@@ -2,27 +2,30 @@
 
 {% block content %}
 <div class="container">
+    <!--
     <div class="row">
         <h4 class="col-md-12">Admin Page</h4>
     </div>
+    -->
     <div class="row">
         <div class="col-md-12">
             <div class="section">
                 <h4>Modules</h4>
                 <div>
-                    <a href="/admin">Admin Home</a>
+                    <a href="/users">User</a>
                 </div>
                 <div>
-                    <a href="/user">User Home</a>
+                    <a href="/items">Item</a>
                 </div>
                 <div>
-                    <a href="/item/home">Item Home</a>
+                    <a href="/files">File</a>
+                </div>
+                <br/>
+                <div>
+                    <a href="/announcements">Announcement</a>
                 </div>
                 <div>
-                    <a href="/file">File Home</a>
-                </div>
-                <div>
-                    <a href="/article">Article Home</a>
+                    <a href="/articles">Article</a>
                 </div>
             </div>
         </div>
