--- a/site/views/user/login.html
+++ b/site/views/user/login.html
@@ -26,7 +26,7 @@
     
     <div class="row">
         <div class="col-md-6 col-md-offset-3">
-            <form role="form" action="/user/login" method="POST">
+            <form role="form" action="/users/login" method="POST">
                 <div class="form-group">
                     <label for="email">Email</label>
                     <input type="text" class="form-control" name="email" id="email" placeholder="">
