--- a/site/views/user/signup.html
+++ b/site/views/user/signup.html
@@ -30,7 +30,7 @@
     
     <div class="row signup-form">
         <div class="col-md-6 col-md-offset-3">
-            <form role="form" action="/user/signup" method="POST">
+            <form role="form" action="/users/signup" method="POST">
                 <div class="form-group">
                     <label for="username" class="form-title">Name</label>
                     <input type="text" class="form-control" name="username" id="username" placeholder="">
