--- a/site/views/web/index.html
+++ b/site/views/web/index.html
@@ -8,7 +8,7 @@
 
 {% block content %}
 <div class="body-container container" style="margin-top:10px;">
-    <div class="row" style="min-height:560px;">
+    <div class="row">
         <h4>Welcome</h4>
     </div>
 </div>
