--- a/site/views/web/index.html
+++ b/site/views/web/index.html
@@ -3,34 +3,13 @@
 {% block style %}
 {% parent %}
 <style>
-.section {
-    margin-bottom: 25px;
-}
 </style>
 {% endblock %}
 
 {% block content %}
 <div class="body-container container" style="margin-top:10px;">
-    
     <div class="row">
-        
-        <div class="col-md-4">
-            <div class="section">
-                <div>
-                    <a href="/user">User Home</a>
-                </div>
-                <div>
-                    <a href="/admin">Admin Home</a>
-                </div>
-                <div>
-                    <a href="/upload">Upload Test</a>
-                </div>
-                <div>
-                    <a href="/uploaded_list">List of uploaded</a>
-                </div>
-            </div>
-        </div>
-        
+        <h4>Welcome</h4>
     </div>
 </div>
 {% endblock %}
