--- a/site/public/style/style.css
+++ b/site/public/style/style.css
@@ -1,17 +1,34 @@
+.navbar {
+    border: 0;
+}
+
 .body-container {
-    min-height: 420px;
+    min-height: 540px;
+}
+
+.header-container {
+    padding-left: 0;
+    padding-right: 0;
+}
+
+.login-button {
+    margin-top: 8px;
+}
+
+.user-dropdown {
+    margin-top: 8px;
+    margin-left: 10px;
+}
+
+.dropdown-menu {
+    padding-top: 4px;
 }
 
 .footer-container {
-    margin-top: 20px;
-}
-.header-container {
-    padding-left: 0px;
-    padding-right: 0px;
-}
-.footer {
-    background-color: #e1e1e8;
-}
-.login-button {
-    font-size: 1.5em;
+    height: 100%;
+    width: 100%;
+    padding: 10px 10px 0px;
+    margin-left: 0;
+    margin-right: 0;
+    background-color: #f2f2f2;
 }
