article list and others

--- a/site/views/admin/index.html
+++ b/site/views/admin/index.html
@@ -30,6 +30,9 @@
                 <div>
                     <a href="/articles/add_wysiwyg">Add Article(WYSIWYG)</a>
                 </div>
+                <div>
+                    <a href="/articles/list">Article List(WYSIWYG)</a>
+                </div>
             </div>
         </div>
     </div>
