change button color

--- a/site/views/link/add.html
+++ b/site/views/link/add.html
@@ -14,7 +14,7 @@ function add_new_group() {
         '<p>Text: <input type="text" name="text" /></p>' +
         '<p>Hyperlink: <input type="text" name="hyperlink" /></p>' +
         "</fieldset>" +
-        '<button type="button" class="btn btn-warning" onclick="remove_group(this)">-</button>' +
+        '<button type="button" class="btn btn-danger" onclick="remove_group(this)">-</button>' +
         "<hr>" +
         "</div>");
 };
